// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Accordion Large Accordion 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <ul
    className="ilo--accordion ilo--accordion--large"
  >
    <li
      className="ilo--accordion__item"
    >
      <h3
        className="ilo--h3"
      >
        <button
          aria-controls="panel-l1"
          aria-expanded={false}
          className="ilo--accordion__button ilo--accordion__button--large"
          id="button-l1"
          onClick={[Function]}
        >
          Item1
        </button>
      </h3>
      <div
        aria-expanded={null}
        aria-labelledby="button-l1"
        className="ilo--accordion__panel collapse"
        id="panel-l1"
        role="region"
      >
        <p>
          Content of Item 1
        </p>
        <p>
          Content of Item 1
        </p>
        <p>
          Content of Item 1
        </p>
        <p>
          Content of Item 1
        </p>
        <p>
          Content of Item 1
        </p>
      </div>
    </li>
    <li
      className="ilo--accordion__item"
    >
      <h3
        className="ilo--h3"
      >
        <button
          aria-controls="panel-l2"
          aria-expanded={false}
          className="ilo--accordion__button ilo--accordion__button--large"
          id="button-l2"
          onClick={[Function]}
        >
          Item2
        </button>
      </h3>
      <div
        aria-expanded={null}
        aria-labelledby="button-l2"
        className="ilo--accordion__panel collapse"
        id="panel-l2"
        role="region"
      >
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/Accordion Small Accordion 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <ul
    className="ilo--accordion ilo--accordion--small"
  >
    <li
      className="ilo--accordion__item"
    >
      <h3
        className="ilo--h3"
      >
        <button
          aria-controls="panel-s1"
          aria-expanded={false}
          className="ilo--accordion__button ilo--accordion__button--small"
          id="button-s1"
          onClick={[Function]}
        >
          Item1
        </button>
      </h3>
      <div
        aria-expanded={null}
        aria-labelledby="button-s1"
        className="ilo--accordion__panel collapse"
        id="panel-s1"
        role="region"
      >
        <p>
          Content of Item 1
        </p>
        <p>
          Content of Item 1
        </p>
        <p>
          Content of Item 1
        </p>
        <p>
          Content of Item 1
        </p>
        <p>
          Content of Item 1
        </p>
      </div>
    </li>
    <li
      className="ilo--accordion__item"
    >
      <h3
        className="ilo--h3"
      >
        <button
          aria-controls="panel-s2"
          aria-expanded={false}
          className="ilo--accordion__button ilo--accordion__button--small"
          id="button-s2"
          onClick={[Function]}
        >
          Item2
        </button>
      </h3>
      <div
        aria-expanded={null}
        aria-labelledby="button-s2"
        className="ilo--accordion__panel collapse"
        id="panel-s2"
        role="region"
      >
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/Button Disabled Button 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="ilo--button ilo--button--large ilo--button--primary"
    disabled={true}
    onClick={[Function]}
  >
    <span
      className="button__label"
    >
      Disabled Button
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Button Large Button 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <a
    className="ilo--button ilo--button--large ilo--button--primary  --light"
    href="#"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      className="link__label"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Large Button",
        }
      }
    />
  </a>
</div>
`;

exports[`Storyshots Components/Button Large Primary Button with icon on left 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="ilo--button ilo--button--large ilo--button--primary icon icon__position--left"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__label"
    >
      Icon on left
    </span>
    <svg
      aria-hidden={true}
      className="ilo--icon"
      fill="currentColor"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.9497 15.5356L13.4142 12L16.9497 8.46451L15.5355 7.05029L12 10.5858L8.46446 7.05029L7.05025 8.46451L10.5858 12L7.05025 15.5356L8.46446 16.9498L12 13.4143L15.5355 16.9498L16.9497 15.5356Z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/Button Large Primary Button with icon on right 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="ilo--button ilo--button--large ilo--button--primary icon icon__position--right"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__label"
    >
      Icon on right
    </span>
    <svg
      aria-hidden={true}
      className="ilo--icon"
      fill="currentColor"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.9497 15.5356L13.4142 12L16.9497 8.46451L15.5355 7.05029L12 10.5858L8.46446 7.05029L7.05025 8.46451L10.5858 12L7.05025 15.5356L8.46446 16.9498L12 13.4143L15.5355 16.9498L16.9497 15.5356Z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/Button Large Secondary Button with icon on left 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="ilo--button ilo--button--large ilo--button--secondary icon icon__position--left"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__label"
    >
      Icon on left
    </span>
    <svg
      aria-hidden={true}
      className="ilo--icon"
      fill="currentColor"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.9497 15.5356L13.4142 12L16.9497 8.46451L15.5355 7.05029L12 10.5858L8.46446 7.05029L7.05025 8.46451L10.5858 12L7.05025 15.5356L8.46446 16.9498L12 13.4143L15.5355 16.9498L16.9497 15.5356Z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/Button Large Secondary Button with icon on right 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="ilo--button ilo--button--large ilo--button--secondary icon icon__position--right"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__label"
    >
      Icon on right
    </span>
    <svg
      aria-hidden={true}
      className="ilo--icon"
      fill="currentColor"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.9497 15.5356L13.4142 12L16.9497 8.46451L15.5355 7.05029L12 10.5858L8.46446 7.05029L7.05025 8.46451L10.5858 12L7.05025 15.5356L8.46446 16.9498L12 13.4143L15.5355 16.9498L16.9497 15.5356Z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/Button Large Tertiary Button with icon on left 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="ilo--button ilo--button--large ilo--button--tertiary icon icon__position--left"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__label"
    >
      Icon on left
    </span>
    <svg
      aria-hidden={true}
      className="ilo--icon"
      fill="currentColor"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.9497 15.5356L13.4142 12L16.9497 8.46451L15.5355 7.05029L12 10.5858L8.46446 7.05029L7.05025 8.46451L10.5858 12L7.05025 15.5356L8.46446 16.9498L12 13.4143L15.5355 16.9498L16.9497 15.5356Z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/Button Large Tertiary Button with icon on right 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="ilo--button ilo--button--large ilo--button--tertiary icon icon__position--right"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__label"
    >
      Icon on right
    </span>
    <svg
      aria-hidden={true}
      className="ilo--icon"
      fill="currentColor"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.9497 15.5356L13.4142 12L16.9497 8.46451L15.5355 7.05029L12 10.5858L8.46446 7.05029L7.05025 8.46451L10.5858 12L7.05025 15.5356L8.46446 16.9498L12 13.4143L15.5355 16.9498L16.9497 15.5356Z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/Button Medium Button 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <a
    className="ilo--button ilo--button--medium ilo--button--primary  --light"
    href="#"
    rel=""
    target=""
  >
    <span
      className="link__label"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Medium Button",
        }
      }
    />
  </a>
</div>
`;

exports[`Storyshots Components/Button Medium Primary Button with icon on left 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="ilo--button ilo--button--medium ilo--button--primary icon icon__position--left"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__label"
    >
      Icon on left
    </span>
    <svg
      aria-hidden={true}
      className="ilo--icon"
      fill="currentColor"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.9497 15.5356L13.4142 12L16.9497 8.46451L15.5355 7.05029L12 10.5858L8.46446 7.05029L7.05025 8.46451L10.5858 12L7.05025 15.5356L8.46446 16.9498L12 13.4143L15.5355 16.9498L16.9497 15.5356Z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/Button Medium Primary Button with icon on right 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="ilo--button ilo--button--medium ilo--button--primary icon icon__position--right"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__label"
    >
      Icon on right
    </span>
    <svg
      aria-hidden={true}
      className="ilo--icon"
      fill="currentColor"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.9497 15.5356L13.4142 12L16.9497 8.46451L15.5355 7.05029L12 10.5858L8.46446 7.05029L7.05025 8.46451L10.5858 12L7.05025 15.5356L8.46446 16.9498L12 13.4143L15.5355 16.9498L16.9497 15.5356Z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/Button Medium Secondary Button with icon on left 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="ilo--button ilo--button--medium ilo--button--secondary icon icon__position--left"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__label"
    >
      Icon on left
    </span>
    <svg
      aria-hidden={true}
      className="ilo--icon"
      fill="currentColor"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.9497 15.5356L13.4142 12L16.9497 8.46451L15.5355 7.05029L12 10.5858L8.46446 7.05029L7.05025 8.46451L10.5858 12L7.05025 15.5356L8.46446 16.9498L12 13.4143L15.5355 16.9498L16.9497 15.5356Z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/Button Medium Secondary Button with icon on right 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="ilo--button ilo--button--medium ilo--button--secondary icon icon__position--right"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__label"
    >
      Icon on right
    </span>
    <svg
      aria-hidden={true}
      className="ilo--icon"
      fill="currentColor"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.9497 15.5356L13.4142 12L16.9497 8.46451L15.5355 7.05029L12 10.5858L8.46446 7.05029L7.05025 8.46451L10.5858 12L7.05025 15.5356L8.46446 16.9498L12 13.4143L15.5355 16.9498L16.9497 15.5356Z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/Button Medium Tertiary Button with icon on left 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="ilo--button ilo--button--medium ilo--button--tertiary icon icon__position--left"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__label"
    >
      Icon on left
    </span>
    <svg
      aria-hidden={true}
      className="ilo--icon"
      fill="currentColor"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.9497 15.5356L13.4142 12L16.9497 8.46451L15.5355 7.05029L12 10.5858L8.46446 7.05029L7.05025 8.46451L10.5858 12L7.05025 15.5356L8.46446 16.9498L12 13.4143L15.5355 16.9498L16.9497 15.5356Z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/Button Medium Tertiary Button with icon on right 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="ilo--button ilo--button--medium ilo--button--tertiary icon icon__position--right"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__label"
    >
      Icon on right
    </span>
    <svg
      aria-hidden={true}
      className="ilo--icon"
      fill="currentColor"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.9497 15.5356L13.4142 12L16.9497 8.46451L15.5355 7.05029L12 10.5858L8.46446 7.05029L7.05025 8.46451L10.5858 12L7.05025 15.5356L8.46446 16.9498L12 13.4143L15.5355 16.9498L16.9497 15.5356Z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/Button Primary Button 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="ilo--button ilo--button--large ilo--button--primary"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__label"
    >
      Primary Button
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Button Secondary Button 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="ilo--button ilo--button--large ilo--button--secondary"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__label"
    >
      Secondary Button
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Button Small Button 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <a
    className="ilo--button ilo--button--small ilo--button--primary  --light"
    href="#"
    rel=""
    target=""
  >
    <span
      className="link__label"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Small Button",
        }
      }
    />
  </a>
</div>
`;

exports[`Storyshots Components/Button Small Primary Button with icon on left 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="ilo--button ilo--button--small ilo--button--primary icon icon__position--left"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__label"
    >
      Icon on left
    </span>
    <svg
      aria-hidden={true}
      className="ilo--icon"
      fill="currentColor"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.9497 15.5356L13.4142 12L16.9497 8.46451L15.5355 7.05029L12 10.5858L8.46446 7.05029L7.05025 8.46451L10.5858 12L7.05025 15.5356L8.46446 16.9498L12 13.4143L15.5355 16.9498L16.9497 15.5356Z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/Button Small Primary Button with icon on right; 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="ilo--button ilo--button--small ilo--button--primary icon icon__position--right"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__label"
    >
      Icon on right
    </span>
    <svg
      aria-hidden={true}
      className="ilo--icon"
      fill="currentColor"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.9497 15.5356L13.4142 12L16.9497 8.46451L15.5355 7.05029L12 10.5858L8.46446 7.05029L7.05025 8.46451L10.5858 12L7.05025 15.5356L8.46446 16.9498L12 13.4143L15.5355 16.9498L16.9497 15.5356Z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/Button Small Secondary Button with icon on left 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="ilo--button ilo--button--small ilo--button--secondary icon icon__position--left"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__label"
    >
      Icon on left
    </span>
    <svg
      aria-hidden={true}
      className="ilo--icon"
      fill="currentColor"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.9497 15.5356L13.4142 12L16.9497 8.46451L15.5355 7.05029L12 10.5858L8.46446 7.05029L7.05025 8.46451L10.5858 12L7.05025 15.5356L8.46446 16.9498L12 13.4143L15.5355 16.9498L16.9497 15.5356Z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/Button Small Secondary Button with icon on right; 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="ilo--button ilo--button--small ilo--button--secondary icon icon__position--right"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__label"
    >
      Icon on right
    </span>
    <svg
      aria-hidden={true}
      className="ilo--icon"
      fill="currentColor"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.9497 15.5356L13.4142 12L16.9497 8.46451L15.5355 7.05029L12 10.5858L8.46446 7.05029L7.05025 8.46451L10.5858 12L7.05025 15.5356L8.46446 16.9498L12 13.4143L15.5355 16.9498L16.9497 15.5356Z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/Button Small Tertiary Button with icon on left 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="ilo--button ilo--button--small ilo--button--tertiary icon icon__position--left"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__label"
    >
      Icon on left
    </span>
    <svg
      aria-hidden={true}
      className="ilo--icon"
      fill="currentColor"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.9497 15.5356L13.4142 12L16.9497 8.46451L15.5355 7.05029L12 10.5858L8.46446 7.05029L7.05025 8.46451L10.5858 12L7.05025 15.5356L8.46446 16.9498L12 13.4143L15.5355 16.9498L16.9497 15.5356Z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/Button Small Tertiary Button with icon on right; 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="ilo--button ilo--button--small ilo--button--tertiary icon icon__position--right"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__label"
    >
      Icon on right
    </span>
    <svg
      aria-hidden={true}
      className="ilo--icon"
      fill="currentColor"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.9497 15.5356L13.4142 12L16.9497 8.46451L15.5355 7.05029L12 10.5858L8.46446 7.05029L7.05025 8.46451L10.5858 12L7.05025 15.5356L8.46446 16.9498L12 13.4143L15.5355 16.9498L16.9497 15.5356Z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/Button Tertiary Button 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="ilo--button ilo--button--large ilo--button--tertiary"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__label"
    >
      Tertiary Button
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Callout Error Callout 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    className="ilo--callout ilo--callout--error ilo--callout--collapse"
  >
    <div
      className="ilo--callout--sidebar"
    >
      <span
        className="icon icon--error"
      />
    </div>
    <div
      className="ilo--callout--content"
    >
      <div
        className="ilo--callout--header"
      >
        <h5
          className="ilo--callout--headline"
        >
          Notification Title
        </h5>
        <button
          className="ilo--callout--toggle"
          onClick={[Function]}
          type="button"
        >
          Closed
          <span
            className="ilo--callout--toggle--icon"
          />
        </button>
      </div>
      <p
        className="ilo--callout--copy"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
      </p>
      <a
        className="ilo--callout--cta ilo--button ilo--button--small ilo--button--secondary  --light"
        href="http://www.google.com"
        rel=""
        target=""
      >
        <span
          className="link__label"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Optional CTA",
            }
          }
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Callout Info Callout 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    className="ilo--callout ilo--callout--info ilo--callout--open"
  >
    <div
      className="ilo--callout--sidebar"
    >
      <span
        className="icon icon--info"
      />
    </div>
    <div
      className="ilo--callout--content"
    >
      <div
        className="ilo--callout--header"
      >
        <h5
          className="ilo--callout--headline"
        >
          Notification Title
        </h5>
      </div>
      <p
        className="ilo--callout--copy"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Callout Success Callout 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    className="ilo--callout ilo--callout--success ilo--callout--open"
  >
    <div
      className="ilo--callout--sidebar"
    >
      <span
        className="icon icon--success"
      />
    </div>
    <div
      className="ilo--callout--content"
    >
      <div
        className="ilo--callout--header"
      >
        <h5
          className="ilo--callout--headline"
        >
          Notification Title
        </h5>
      </div>
      <p
        className="ilo--callout--copy"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Callout Warning Callout 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    className="ilo--callout ilo--callout--warning ilo--callout--open"
  >
    <div
      className="ilo--callout--sidebar"
    >
      <span
        className="icon icon--warning"
      />
    </div>
    <div
      className="ilo--callout--content"
    >
      <div
        className="ilo--callout--header"
      >
        <h5
          className="ilo--callout--headline"
        >
          Notification Title
        </h5>
      </div>
      <p
        className="ilo--callout--copy"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ContextMenu ContextMenu - Basic 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <ul
    className="ilo--context-menu"
  >
    <li
      className="ilo--context-menu--item "
    >
      <a
        className="ilo--context-menu--link"
        href="http://www.google.com"
      >
        <span
          className="ilo--context-menu--label"
        >
          Link One
        </span>
      </a>
    </li>
    <li
      className="ilo--context-menu--item "
    >
      <a
        className="ilo--context-menu--link"
        href="http://www.google.com"
      >
        <span
          className="ilo--context-menu--label"
        >
          Link Two
        </span>
      </a>
    </li>
    <li
      className="ilo--context-menu--item "
    >
      <a
        className="ilo--context-menu--link"
        href="http://www.google.com"
      >
        <span
          className="ilo--context-menu--label"
        >
          Link Three
        </span>
      </a>
    </li>
    <li
      className="ilo--context-menu--item "
    >
      <a
        className="ilo--context-menu--link"
        href="http://www.google.com"
      >
        <span
          className="ilo--context-menu--label"
        >
          Link Four
        </span>
      </a>
    </li>
    <li
      className="ilo--context-menu--item "
    >
      <a
        className="ilo--context-menu--link"
        href="http://www.google.com"
      >
        <span
          className="ilo--context-menu--label"
        >
          Link Five Is Much Longer
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/ContextMenu ContextMenu - With A 'Section' 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <ul
    className="ilo--context-menu"
  >
    <li
      className="ilo--context-menu--item "
    >
      <a
        className="ilo--context-menu--link"
        href="http://www.google.com"
      >
        <span
          className="ilo--context-menu--label"
        >
          Link One
        </span>
      </a>
    </li>
    <li
      className="ilo--context-menu--item "
    >
      <a
        className="ilo--context-menu--link"
        href="http://www.google.com"
      >
        <span
          className="ilo--context-menu--label"
        >
          Link Two
        </span>
      </a>
    </li>
    <li
      className="ilo--context-menu--item endsection"
    >
      <a
        className="ilo--context-menu--link"
        href="http://www.google.com"
      >
        <span
          className="ilo--context-menu--label"
        >
          Link Three Ends A Section
        </span>
      </a>
    </li>
    <li
      className="ilo--context-menu--item "
    >
      <a
        className="ilo--context-menu--link"
        href="http://www.google.com"
      >
        <span
          className="ilo--context-menu--label"
        >
          Link Four
        </span>
      </a>
    </li>
    <li
      className="ilo--context-menu--item "
    >
      <a
        className="ilo--context-menu--link"
        href="http://www.google.com"
      >
        <span
          className="ilo--context-menu--label"
        >
          Link Five Is Much Longer
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/Dropdown Dropdown - Basic 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <fieldset
    className="ilo--fieldset"
  >
    <label
      className="ilo--fieldset--label"
      htmlFor="dropdown"
    >
      Dropdown Label
    </label>
    <div
      className="ilo--dropdown--wrapper"
    >
      <select
        autoComplete="false"
        className="ilo--dropdown"
        disabled={false}
        id="dropdown"
        name="dropdown"
        onChange={[Function]}
        required={false}
        value="option one"
      >
        <option
          disabled={false}
          label="Option One"
          value="option one"
        />
        <option
          disabled={false}
          label="Option Two"
          value="option two"
        />
        <option
          disabled={false}
          label="Option Three"
          value="option three"
        />
        <option
          disabled={false}
          label="Option Four"
          value="four"
        />
        <option
          disabled={false}
          label="Option Five"
          value="the fifth"
        />
      </select>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Components/Dropdown Dropdown - Has Error 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <fieldset
    className="ilo--fieldset error"
  >
    <label
      className="ilo--fieldset--label"
      htmlFor="dropdown"
    >
      Dropdown Label
    </label>
    <div
      className="ilo--dropdown--wrapper"
    >
      <select
        autoComplete="false"
        className="ilo--dropdown error"
        disabled={false}
        id="dropdown"
        name="dropdown"
        onChange={[Function]}
        required={false}
        value="option one"
      >
        <option
          disabled={false}
          label="Option One"
          value="option one"
        />
        <option
          disabled={false}
          label="Option Two"
          value="option two"
        />
        <option
          disabled={false}
          label="Option Three"
          value="option three"
        />
        <option
          disabled={false}
          label="Option Four"
          value="four"
        />
        <option
          disabled={false}
          label="Option Five"
          value="the fifth"
        />
      </select>
    </div>
    <span
      className="ilo--fieldset--error"
    >
      This is an error message
    </span>
  </fieldset>
</div>
`;

exports[`Storyshots Components/Dropdown Dropdown - Has Helper 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <fieldset
    className="ilo--fieldset"
  >
    <label
      className="ilo--fieldset--label"
      htmlFor="dropdown"
    >
      Dropdown Label
    </label>
    <div
      className="ilo--dropdown--wrapper"
    >
      <select
        autoComplete="false"
        className="ilo--dropdown"
        disabled={false}
        id="dropdown"
        name="dropdown"
        onChange={[Function]}
        required={false}
        value="option one"
      >
        <option
          disabled={false}
          label="Option One"
          value="option one"
        />
        <option
          disabled={false}
          label="Option Two"
          value="option two"
        />
        <option
          disabled={false}
          label="Option Three"
          value="option three"
        />
        <option
          disabled={false}
          label="Option Four"
          value="four"
        />
        <option
          disabled={false}
          label="Option Five"
          value="the fifth"
        />
      </select>
    </div>
    <span
      className="ilo--fieldset--helper"
    >
      Example Helper Text
    </span>
  </fieldset>
</div>
`;

exports[`Storyshots Components/Dropdown Dropdown - Has Tooltip 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <fieldset
    className="ilo--fieldset"
  >
    <label
      className="ilo--fieldset--label"
      htmlFor="dropdown"
    >
      Dropdown Label
    </label>
    <div
      className="ilo--tooltip--wrapper has-icon"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <span
        className="ilo--tooltip--icon"
      >
        <svg
          aria-hidden={true}
          className="ilo--icon"
          fill="currentColor"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0Zm1 12H7V7h2v5ZM8 6a.94.94 0 0 1-1-1 .94.94 0 0 1 1-1 .94.94 0 0 1 1 1 .94.94 0 0 1-1 1Z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        className="ilo--fieldset--label ilo--tooltip ilo--tooltip--dark ilo--tooltip--alignment-left"
        style={
          Object {
            "left": "0px",
            "top": "0px",
          }
        }
      >
        <span
          className="ilo--fieldset--label ilo--tooltip--arrow ilo--tooltip--arrow--placement-center"
          role="presentation"
        />
        This is my tooltip text.
      </span>
    </div>
    <div
      className="ilo--dropdown--wrapper"
    >
      <select
        autoComplete="false"
        className="ilo--dropdown"
        disabled={false}
        id="dropdown"
        name="dropdown"
        onChange={[Function]}
        required={false}
        value="option one"
      >
        <option
          disabled={false}
          label="Option One"
          value="option one"
        />
        <option
          disabled={false}
          label="Option Two"
          value="option two"
        />
        <option
          disabled={false}
          label="Option Three"
          value="option three"
        />
        <option
          disabled={false}
          label="Option Four"
          value="four"
        />
        <option
          disabled={false}
          label="Option Five"
          value="the fifth"
        />
      </select>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Components/Dropdown Dropdown - Is Disabled 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <fieldset
    className="ilo--fieldset"
  >
    <label
      className="ilo--fieldset--label"
      htmlFor="dropdown"
    >
      Dropdown Label
    </label>
    <div
      className="ilo--dropdown--wrapper"
    >
      <select
        autoComplete="false"
        className="ilo--dropdown"
        disabled={false}
        id="dropdown"
        name="dropdown"
        onChange={[Function]}
        required={false}
        value="option one"
      >
        <option
          disabled={false}
          label="Option One"
          value="option one"
        />
        <option
          disabled={false}
          label="Option Two"
          value="option two"
        />
        <option
          disabled={false}
          label="Option Three"
          value="option three"
        />
        <option
          disabled={false}
          label="Option Four"
          value="four"
        />
        <option
          disabled={false}
          label="Option Five"
          value="the fifth"
        />
      </select>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Components/Empty Empty 1 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    className="storybook ilo--empty"
  />
</div>
`;

exports[`Storyshots Components/Heading Heading Level 1 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <h1
    className="ilo--h1 ilo--h1--actionable"
  >
    Heading 1
  </h1>
</div>
`;

exports[`Storyshots Components/Heading Heading Level 2 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <h2
    className="ilo--h2"
  >
    Heading 2
  </h2>
</div>
`;

exports[`Storyshots Components/Heading Heading Level 3 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <h3
    className="ilo--h3"
  >
    Heading 3
  </h3>
</div>
`;

exports[`Storyshots Components/Heading Heading Level 4 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <h4
    className="ilo--h4"
  >
    Heading 4
  </h4>
</div>
`;

exports[`Storyshots Components/Heading Heading Level 5 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <h5
    className="ilo--h5"
  >
    Heading 5
  </h5>
</div>
`;

exports[`Storyshots Components/Heading Heading Level 6 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <h6
    className="ilo--h6"
  >
    Heading 6
  </h6>
</div>
`;

exports[`Storyshots Components/Image Image 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <figure
    className="image ilo--media"
  >
    <div
      className="image ilo--media--wrapper"
    >
      <picture
        className="ilo--media--img"
      >
        <source
          media="(min-width: 1440px)"
          srcSet="https://place-hold.it/1600x1200?text=LargestBreakpointImage"
        />
        <source
          media="(min-width: 1200px)"
          srcSet="https://place-hold.it/1200x900?text=LargeBreakpointImage"
        />
        <source
          media="(min-width: 800px)"
          srcSet="https://place-hold.it/800x600?text=MediumBreakpointImage"
        />
        <img
          alt="My alt text"
          src="https://place-hold.it/400x300?text=SmallBreakpointImage"
        />
      </picture>
      <span
        className="ilo--credit"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <span
          className="ilo--credit--label"
        >
          Photo: copyright 2022 Person S. Name
        </span>
      </span>
    </div>
    <figcaption
      className="ilo--media--caption"
    >
      my image caption
    </figcaption>
  </figure>
</div>
`;

exports[`Storyshots Components/Link Dark Link 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <a
    className="ilo--link ilo--link--dark"
    href="https://www.wikipedia.org/"
    rel=""
    target=""
  >
    
    This is text for the link
  </a>
</div>
`;

exports[`Storyshots Components/Link Footer Link 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <a
    className="ilo--link ilo--link--footer"
    href="https://www.weather.com/"
    rel=""
    target=""
  >
    
    This is text for the link
  </a>
</div>
`;

exports[`Storyshots Components/Link Light Link 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <a
    className="ilo--link ilo--link--light"
    href="https://www.google.com/"
    rel=""
    target=""
  >
    
    This is text for the link
  </a>
</div>
`;

exports[`Storyshots Components/LinkList LinkList - Basic 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    className="ilo--link-list"
  >
    <h3
      className="ilo--link-list--headline"
    >
      Link List Headline
    </h3>
    <ul
      className="ilo--link-list--linkgroups"
    >
      <li
        className="ilo--link-list--linkgroups-item"
      >
        <ul
          className="ilo--link-list--links"
        >
          <li
            className="ilo--link-list--links--item"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Link One
              </span>
            </a>
          </li>
          <li
            className="ilo--link-list--links--item"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Link Two
              </span>
            </a>
          </li>
          <li
            className="ilo--link-list--links--item"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Link Three
              </span>
            </a>
          </li>
          <li
            className="ilo--link-list--links--item"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Link Four
              </span>
            </a>
          </li>
          <li
            className="ilo--link-list--links--item"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Link Five Is Much Longer
              </span>
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Components/LinkList LinkList - With Sections 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    className="ilo--link-list"
  >
    <h3
      className="ilo--link-list--headline"
    >
      Link List Headline
    </h3>
    <ul
      className="ilo--link-list--linkgroups"
    >
      <li
        className="ilo--link-list--linkgroups-item"
      >
        <h4
          className="ilo--link-list--links--headline"
        >
          Section Headline
        </h4>
        <ul
          className="ilo--link-list--links"
        >
          <li
            className="ilo--link-list--links--item"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Link One
              </span>
            </a>
          </li>
          <li
            className="ilo--link-list--links--item"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Link Two
              </span>
            </a>
          </li>
          <li
            className="ilo--link-list--links--item"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Link Three
              </span>
            </a>
          </li>
          <li
            className="ilo--link-list--links--item"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Link Four
              </span>
            </a>
          </li>
          <li
            className="ilo--link-list--links--item"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Link Five Is Much Longer
              </span>
            </a>
          </li>
        </ul>
      </li>
      <li
        className="ilo--link-list--linkgroups-item"
      >
        <h4
          className="ilo--link-list--links--headline"
        >
          Section 2 Headline
        </h4>
        <ul
          className="ilo--link-list--links"
        >
          <li
            className="ilo--link-list--links--item"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Section 2 Link One
              </span>
            </a>
          </li>
          <li
            className="ilo--link-list--links--item"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Section 2 Link Two
              </span>
            </a>
          </li>
          <li
            className="ilo--link-list--links--item"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Section 2 Link Three
              </span>
            </a>
          </li>
          <li
            className="ilo--link-list--links--item"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Section 2 Link Four
              </span>
            </a>
          </li>
          <li
            className="ilo--link-list--links--item"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Section 2 Link Five
              </span>
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Components/LinkList LinkList - With Sections and Some Indented Items 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    className="ilo--link-list"
  >
    <h3
      className="ilo--link-list--headline"
    >
      Link List Headline
    </h3>
    <ul
      className="ilo--link-list--linkgroups"
    >
      <li
        className="ilo--link-list--linkgroups-item"
      >
        <h4
          className="ilo--link-list--links--headline"
        >
          Section Headline
        </h4>
        <ul
          className="ilo--link-list--links"
        >
          <li
            className="ilo--link-list--links--item indented"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Link One
              </span>
            </a>
          </li>
          <li
            className="ilo--link-list--links--item"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Link Two
              </span>
            </a>
          </li>
          <li
            className="ilo--link-list--links--item"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Link Three
              </span>
            </a>
          </li>
          <li
            className="ilo--link-list--links--item"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Link Four
              </span>
            </a>
          </li>
          <li
            className="ilo--link-list--links--item indented"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Link Five Is Much Longer
              </span>
            </a>
          </li>
        </ul>
      </li>
      <li
        className="ilo--link-list--linkgroups-item"
      >
        <h4
          className="ilo--link-list--links--headline"
        >
          Section 2 Headline
        </h4>
        <ul
          className="ilo--link-list--links"
        >
          <li
            className="ilo--link-list--links--item"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Section 2 Link One
              </span>
            </a>
          </li>
          <li
            className="ilo--link-list--links--item indented"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Section 2 Link Two
              </span>
            </a>
          </li>
          <li
            className="ilo--link-list--links--item indented"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Section 2 Link Three
              </span>
            </a>
          </li>
          <li
            className="ilo--link-list--links--item indented"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Section 2 Link Four
              </span>
            </a>
          </li>
          <li
            className="ilo--link-list--links--item"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Section 2 Link Five
              </span>
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Components/LinkList LinkList - With Some Indented Items 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    className="ilo--link-list"
  >
    <h3
      className="ilo--link-list--headline"
    >
      Link List Headline
    </h3>
    <ul
      className="ilo--link-list--linkgroups"
    >
      <li
        className="ilo--link-list--linkgroups-item"
      >
        <ul
          className="ilo--link-list--links"
        >
          <li
            className="ilo--link-list--links--item"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Link One
              </span>
            </a>
          </li>
          <li
            className="ilo--link-list--links--item indented"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Link Two
              </span>
            </a>
          </li>
          <li
            className="ilo--link-list--links--item indented"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Link Three
              </span>
            </a>
          </li>
          <li
            className="ilo--link-list--links--item indented"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Link Four
              </span>
            </a>
          </li>
          <li
            className="ilo--link-list--links--item"
          >
            <a
              className="ilo--link-list--link"
              href="http://www.google.com"
            >
              <span
                className="ilo--link-list--label"
              >
                Link Five Is Much Longer
              </span>
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Components/List Horizontal List 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <ul
    className="ilo--list ilo--list--horizontal ilo--list--unordered"
  >
    <h5
      className="ilo--list__title"
    >
      Horizontal List Title
    </h5>
    <li
      className="ilo--list__item"
    >
      <p>
        Arabica
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Robusta
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Black coffee
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Latte
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Cappuccino
      </p>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/List Ordered List 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <ol
    className="ilo--list ilo--list--ordered"
  >
    <h5
      className="ilo--list__title"
    >
      Ordered List Title
    </h5>
    <li
      className="ilo--list__item"
    >
      <p>
        Arabica. Arabica is the most popular type of coffee, hands down.
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Robusta. While Arabica is the most popular, Robusta is cheaper and stronger.
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Black coffee is as simple as it gets with ground coffee beans steeped in hot water, served warm.
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Latte. Made with espresso and hot steamed milk, milkier than a cappuccino.
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Cappuccino. Made with espresso and milk that has been frothed up with pressurized steam.
      </p>
    </li>
  </ol>
</div>
`;

exports[`Storyshots Components/List Unordered List 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <ul
    className="ilo--list ilo--list--unordered"
  >
    <h5
      className="ilo--list__title"
    >
      Unordered List Title
    </h5>
    <li
      className="ilo--list__item"
    >
      <p>
        Arabica. Arabica is the most popular type of coffee, hands down.
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Robusta. While Arabica is the most popular, Robusta is cheaper and stronger.
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Black coffee is as simple as it gets with ground coffee beans steeped in hot water, served warm.
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Latte. Made with espresso and hot steamed milk, milkier than a cappuccino.
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Cappuccino. Made with espresso and milk that has been frothed up with pressurized steam.
      </p>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/List Unstyled List 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <ul
    className="ilo--list ilo--list--unstyled"
  >
    <h5
      className="ilo--list__title"
    >
      Unstyled List Title
    </h5>
    <li
      className="ilo--list__item"
    >
      <p>
        Arabica. Arabica is the most popular type of coffee, hands down.
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        <b>
          With milk added.
        </b>
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Robusta. While Arabica is the most popular, Robusta is cheaper and stronger.
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Black coffee is as simple as it gets with ground coffee beans steeped in hot water, served warm.
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Latte. Made with espresso and hot steamed milk, milkier than a cappuccino.
      </p>
    </li>
    <li
      className="ilo--list__item"
    >
      <p>
        Cappuccino. Made with espresso and milk that has been frothed up with pressurized steam.
      </p>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/Loading Loading - idle large 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    aria-live="assertive"
    className="storybook ilo--loading ilo--loading--large ilo--loading--idle"
    role="alert"
  />
</div>
`;

exports[`Storyshots Components/Loading Loading - idle small 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    aria-live="assertive"
    className="storybook ilo--loading ilo--loading--small ilo--loading--idle"
    role="alert"
  />
</div>
`;

exports[`Storyshots Components/Loading Loading - loaded large 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    aria-live="assertive"
    className="storybook ilo--loading ilo--loading--large ilo--loading--loaded"
    role="alert"
  >
    <p
      className="ilo--loading--copy"
    >
      Completed
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Loading Loading - loaded small 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    aria-live="assertive"
    className="storybook ilo--loading ilo--loading--small ilo--loading--loaded"
    role="alert"
  >
    <p
      className="ilo--loading--copy"
    >
      Completed
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Loading Loading - loading large 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    aria-live="assertive"
    className="storybook ilo--loading ilo--loading--large ilo--loading--loading"
    role="alert"
  >
    <p
      className="ilo--loading--copy"
    >
      Submitting
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Loading Loading - loading large 2`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    aria-live="assertive"
    className="storybook ilo--loading ilo--loading--large ilo--loading--loading"
    role="alert"
  >
    <p
      className="ilo--loading--copy"
    >
      Submitting
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Loading Loading - loading small 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    aria-live="assertive"
    className="storybook ilo--loading ilo--loading--small ilo--loading--loading"
    role="alert"
  >
    <p
      className="ilo--loading--copy"
    >
      Submitting
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Notification Notification - dialog, has call to action 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    aria-live="polite"
    aria-relevant="additions"
    className="storybook ilo--notification ilo--notification--dialog icon icon--info"
    role="status"
  >
    <div
      className="ilo--notification--content"
    >
      <h2
        className="ilo--notification--headline"
      >
        Notification With CTA
      </h2>
      <p
        className="ilo--notification--copy"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
      </p>
      <time
        className="ilo--notification--date"
        dateTime="1670389200"
      >
        Dec 7, 2022
      </time>
      <a
        className="ilo--notification--cta ilo--button ilo--button--small ilo--button--secondary  --light"
        href="http://www.google.com"
        rel=""
        target=""
      >
        <span
          className="link__label"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Optional CTA",
            }
          }
        />
      </a>
    </div>
    <button
      className="ilo--notification--close"
      onClick={[Function]}
      type="button"
    >
      <span>
        Close
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Notification Notification - error 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    aria-live="polite"
    aria-relevant="additions"
    className="storybook ilo--notification ilo--notification--inline icon icon--error"
    role="status"
  >
    <div
      className="ilo--notification--content"
    >
      <h2
        className="ilo--notification--headline"
      >
        Notification Error
      </h2>
      <p
        className="ilo--notification--copy"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
      </p>
      <time
        className="ilo--notification--date"
        dateTime="1670389200"
      >
        Dec 7, 2022
      </time>
    </div>
    <button
      className="ilo--notification--close"
      onClick={[Function]}
      type="button"
    >
      <span>
        Close
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Notification Notification - error dialog 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    aria-live="polite"
    aria-relevant="additions"
    className="storybook ilo--notification ilo--notification--dialog icon icon--error"
    role="status"
  >
    <div
      className="ilo--notification--content"
    >
      <h2
        className="ilo--notification--headline"
      >
        Notification Error
      </h2>
      <p
        className="ilo--notification--copy"
      >
        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
      </p>
      <time
        className="ilo--notification--date"
        dateTime="1670389200"
      >
        Dec 7, 2022
      </time>
    </div>
    <button
      className="ilo--notification--close"
      onClick={[Function]}
      type="button"
    >
      <span>
        Close
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Notification Notification - has call to action 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    aria-live="polite"
    aria-relevant="additions"
    className="storybook ilo--notification ilo--notification--inline icon icon--info"
    role="status"
  >
    <div
      className="ilo--notification--content"
    >
      <h2
        className="ilo--notification--headline"
      >
        With CTA
      </h2>
      <p
        className="ilo--notification--copy"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
      </p>
      <time
        className="ilo--notification--date"
        dateTime="1670389200"
      >
        Dec 7, 2022
      </time>
      <a
        className="ilo--notification--cta ilo--button ilo--button--small ilo--button--secondary  --light"
        href="http://www.google.com"
        rel=""
        target=""
      >
        <span
          className="link__label"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Optional CTA",
            }
          }
        />
      </a>
    </div>
    <button
      className="ilo--notification--close"
      onClick={[Function]}
      type="button"
    >
      <span>
        Close
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Notification Notification - info 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    aria-live="polite"
    aria-relevant="additions"
    className="storybook ilo--notification ilo--notification--inline icon icon--info"
    role="status"
  >
    <div
      className="ilo--notification--content"
    >
      <h2
        className="ilo--notification--headline"
      >
        Notification Info
      </h2>
      <p
        className="ilo--notification--copy"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
      </p>
      <time
        className="ilo--notification--date"
        dateTime="1670389200"
      >
        Dec 7, 2022
      </time>
    </div>
    <button
      className="ilo--notification--close"
      onClick={[Function]}
      type="button"
    >
      <span>
        Close
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Notification Notification - info dialog 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    aria-live="polite"
    aria-relevant="additions"
    className="storybook ilo--notification ilo--notification--dialog icon icon--info"
    role="status"
  >
    <div
      className="ilo--notification--content"
    >
      <h2
        className="ilo--notification--headline"
      >
        Notification Info
      </h2>
      <p
        className="ilo--notification--copy"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
      </p>
      <time
        className="ilo--notification--date"
        dateTime="1670389200"
      >
        Dec 7, 2022
      </time>
    </div>
    <button
      className="ilo--notification--close"
      onClick={[Function]}
      type="button"
    >
      <span>
        Close
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Notification Notification - success 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    aria-live="polite"
    aria-relevant="additions"
    className="storybook ilo--notification ilo--notification--inline icon icon--success"
    role="status"
  >
    <div
      className="ilo--notification--content"
    >
      <h2
        className="ilo--notification--headline"
      >
        Notification Success
      </h2>
      <p
        className="ilo--notification--copy"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
      </p>
      <time
        className="ilo--notification--date"
        dateTime="1670389200"
      >
        Dec 7, 2022
      </time>
    </div>
    <button
      className="ilo--notification--close"
      onClick={[Function]}
      type="button"
    >
      <span>
        Close
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Notification Notification - success dialog 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    aria-live="polite"
    aria-relevant="additions"
    className="storybook ilo--notification ilo--notification--dialog icon icon--success"
    role="status"
  >
    <div
      className="ilo--notification--content"
    >
      <h2
        className="ilo--notification--headline"
      >
        Notification Success
      </h2>
      <p
        className="ilo--notification--copy"
      >
        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
      </p>
      <time
        className="ilo--notification--date"
        dateTime="1670389200"
      >
        Dec 7, 2022
      </time>
    </div>
    <button
      className="ilo--notification--close"
      onClick={[Function]}
      type="button"
    >
      <span>
        Close
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Notification Notification - warning 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    aria-live="polite"
    aria-relevant="additions"
    className="storybook ilo--notification ilo--notification--inline icon icon--warning"
    role="status"
  >
    <div
      className="ilo--notification--content"
    >
      <h2
        className="ilo--notification--headline"
      >
        Notification Warning
      </h2>
      <p
        className="ilo--notification--copy"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
      </p>
      <time
        className="ilo--notification--date"
        dateTime="1670389200"
      >
        Dec 7, 2022
      </time>
    </div>
    <button
      className="ilo--notification--close"
      onClick={[Function]}
      type="button"
    >
      <span>
        Close
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Notification Notification - warning dialog 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    aria-live="polite"
    aria-relevant="additions"
    className="storybook ilo--notification ilo--notification--dialog icon icon--warning"
    role="status"
  >
    <div
      className="ilo--notification--content"
    >
      <h2
        className="ilo--notification--headline"
      >
        Notification Warning
      </h2>
      <p
        className="ilo--notification--copy"
      >
        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
      </p>
      <time
        className="ilo--notification--date"
        dateTime="1670389200"
      >
        Dec 7, 2022
      </time>
    </div>
    <button
      className="ilo--notification--close"
      onClick={[Function]}
      type="button"
    >
      <span>
        Close
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Pagination Pagination 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    className="storybook ilo--pagination"
  >
    <div
      className="ilo--pagination--previous-set"
    >
      <a
        className="storybook ilo--pagination--first-page ilo--pagination--link"
        href="https://www.google.com?s=first"
        onClick={[Function]}
        title="First"
      >
        First
      </a>
      <a
        className="storybook ilo--pagination--prev-page ilo--pagination--link"
        href="https://www.google.com?s=prev"
        onClick={[Function]}
        title="Prev"
      >
        Prev
      </a>
    </div>
    <p
      className="ilo--pagination--page"
    >
      <span>
        2
      </span>
       
      of
       
      <span>
        8
      </span>
    </p>
    <div
      className="ilo--pagination--next-set"
    >
      <a
        className="storybook ilo--pagination--next-page ilo--pagination--link"
        href="https://www.google.com?s=next"
        onClick={[Function]}
        title="Next"
      >
        Next
      </a>
      <a
        className="storybook ilo--pagination--last-page ilo--pagination--link"
        href="https://www.google.com?s=last"
        onClick={[Function]}
        title="Last"
      >
        Last
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Profile Profile - All Optional Props 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <figure
    className="storybook ilo--profile"
  >
    <img
      alt="Avatar for Firstname Lastname"
      className="ilo--profile--avatar"
      src="http://placekitten.com/128/128"
    />
    <figcaption
      className="ilo--profile--contents"
    >
      <span
        className="ilo--profile--name id"
      >
        Firstname Lastname
      </span>
      <span
        className="ilo--profile--role id"
      >
        Senior Media Strategist
      </span>
      <p
        className="ilo--profile--description info"
      >
        Firstname Lastname is the Senior Media Strategist. He has been with ILO for eight years.
      </p>
      <a
        className="ilo--profile--link info"
        href="http://www.google.com"
      >
        <span>
          Optional Link
        </span>
      </a>
    </figcaption>
  </figure>
</div>
`;

exports[`Storyshots Components/Profile Profile - Basic 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <figure
    className="storybook ilo--profile"
  >
    <img
      alt="Avatar for Firstname Lastname"
      className="ilo--profile--avatar"
      src="http://placekitten.com/128/128"
    />
    <figcaption
      className="ilo--profile--contents"
    >
      <span
        className="ilo--profile--name id"
      >
        Firstname Lastname
      </span>
    </figcaption>
  </figure>
</div>
`;

exports[`Storyshots Components/Profile Profile - With Descriptoon 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <figure
    className="storybook ilo--profile"
  >
    <img
      alt="Avatar for Firstname Lastname"
      className="ilo--profile--avatar"
      src="http://placekitten.com/128/128"
    />
    <figcaption
      className="ilo--profile--contents"
    >
      <span
        className="ilo--profile--name id"
      >
        Firstname Lastname
      </span>
      <p
        className="ilo--profile--description info"
      >
        Firstname Lastname is the Senior Media Strategist. He has been with ILO for eight years.
      </p>
    </figcaption>
  </figure>
</div>
`;

exports[`Storyshots Components/Profile Profile - With Link 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <figure
    className="storybook ilo--profile"
  >
    <img
      alt="Avatar for Firstname Lastname"
      className="ilo--profile--avatar"
      src="http://placekitten.com/128/128"
    />
    <figcaption
      className="ilo--profile--contents"
    >
      <span
        className="ilo--profile--name id"
      >
        Firstname Lastname
      </span>
      <a
        className="ilo--profile--link info"
        href="http://www.google.com"
      >
        <span>
          Optional Link
        </span>
      </a>
    </figcaption>
  </figure>
</div>
`;

exports[`Storyshots Components/Profile Profile - With Role 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <figure
    className="storybook ilo--profile"
  >
    <img
      alt="Avatar for Firstname Lastname"
      className="ilo--profile--avatar"
      src="http://placekitten.com/128/128"
    />
    <figcaption
      className="ilo--profile--contents"
    >
      <span
        className="ilo--profile--name id"
      >
        Firstname Lastname
      </span>
      <span
        className="ilo--profile--role id"
      >
        Senior Media Strategist
      </span>
    </figcaption>
  </figure>
</div>
`;

exports[`Storyshots Components/ReadMore ReadMore - default 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    className="ilo--read-more"
  >
    <div
      className="ilo--richtext"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
        }
      }
    />
    <button
      aria-expanded={false}
      className="ilo--read-more--button"
      onClick={[Function]}
    >
      Read More
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/ReadMore ReadMore - opened on component load 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    className="ilo--read-more ilo--read-more--open"
  >
    <div
      className="ilo--richtext"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
        }
      }
    />
    <button
      aria-expanded={true}
      className="ilo--read-more--button ilo--read-more--button--open"
      onClick={[Function]}
    >
      Close
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/RichText Rich Text 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    className="ilo--richtext"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<h1>Apollo 11</h1><p><strong>Apollo 11</strong> was the spaceflight that landed the first humans, Americans <a href='http://en.wikipedia.org/wiki/Neil_Armstrong'>Neil Armstrong</a> and <a href='http://en.wikipedia.org/wiki/Buzz_Aldrin'>Buzz Aldrin</a>, on the Moon on July 20, 1969, at 20:18 UTC. Armstrong became the first to step onto the lunar surface 6 hours later on July 21 at 02:56 UTC.</p><p>Armstrong spent about <s>three and a half</s> two and a half hours outside the spacecraft, Aldrin slightly less; and together they collected 47.5 pounds (21.5&nbsp;kg) of lunar material for return to Earth. A third member of the mission, <a href='http://en.wikipedia.org/wiki/Michael_Collins_(astronaut)'>Michael Collins</a>, piloted the <a href='http://en.wikipedia.org/wiki/Apollo_Command/Service_Module'>command</a> spacecraft alone in lunar orbit until Armstrong and Aldrin returned to it for the trip back to Earth. <figure><img alt='placeholder image' class='right' src='https://place-hold.it/400x300?text=Placeholder Image'><figcaption>The caption for this image</figcaption></figure></p><h2>Broadcasting and <em>quotes</em> <a id='quotes' name='quotes'></a></h2><p>Broadcast on live TV to a world-wide audience, Armstrong stepped onto the lunar surface and described the event as:</p><blockquote><p>One small step for [a] man, one giant leap for mankind</p><cite>Neil Armstrong</cite></blockquote><h2>Technical details <a id='tech-details' name='tech-details'></a></h2><p>Launched by a <strong>Saturn V</strong> rocket from <a href='http://en.wikipedia.org/wiki/Kennedy_Space_Center'>Kennedy Space Center</a> in Merritt Island, Florida on July 16, Apollo 11 was the fifth manned mission of <a href='http://en.wikipedia.org/wiki/NASA'>NASA</a>&#39;s Apollo program. The Apollo spacecraft had three parts:</p><ol><li><strong>Command Module</strong> with a cabin for the three astronauts which was the only part which landed back on Earth</li><li><strong>Service Module</strong> which supported the Command Module with propulsion, electrical power, oxygen and water</li><li><strong>Lunar Module</strong> for landing on the Moon.</li></ol><p>After being sent to the Moon by the Saturn V&#39;s upper stage, the astronauts separated the spacecraft from it and travelled for three days until they entered into lunar orbit. Armstrong and Aldrin then moved into the Lunar Module and landed in the <a href='http://en.wikipedia.org/wiki/Mare_Tranquillitatis'>Sea of Tranquility</a>. They stayed a total of about 21 and a half hours on the lunar surface. After lifting off in the upper part of the Lunar Module and rejoining Collins in the Command Module, they returned to Earth and landed in the <a href='http://en.wikipedia.org/wiki/Pacific_Ocean'>Pacific Ocean</a> on July 24.</p><hr><p><small>Source: <a href='http://en.wikipedia.org/wiki/Apollo_11'>Wikipedia.org</a></small></p><h2>H2 Headline</h2><p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p><h3>H3 Headline</h3><p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p><h4>H4 Headline</h4><p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p><h5>H5 Headline</h5><p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p><h6>H6 Headline</h6><p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>",
      }
    }
  />
</div>
`;

exports[`Storyshots Components/SearchField Default SearchField 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <form
    action=""
    className="ilo--searchfield"
  >
    <input
      className="ilo--input"
      disabled={false}
      name="search"
      onChange={[Function]}
      placeholder="Search Field"
      type="search"
    />
    <input
      className="ilo--searchfield--button"
      onClick={[Function]}
      type="submit"
    />
  </form>
</div>
`;

exports[`Storyshots Components/SearchField Disabled SearchField 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <form
    action=""
    className="ilo--searchfield"
  >
    <input
      className="ilo--input"
      disabled={true}
      name="search"
      onChange={[Function]}
      placeholder="Search Field"
      type="search"
    />
    <input
      className="ilo--searchfield--button"
      onClick={[Function]}
      type="submit"
    />
  </form>
</div>
`;

exports[`Storyshots Components/SearchField SearchField Error 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <form
    action=""
    className="ilo--searchfield"
  >
    <input
      className="ilo--input error"
      disabled={false}
      name="search"
      onChange={[Function]}
      placeholder="Search Field"
      type="search"
    />
    <input
      className="ilo--searchfield--button"
      onClick={[Function]}
      type="submit"
    />
  </form>
</div>
`;

exports[`Storyshots Components/TableOfContents Table Of Contents 1 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <nav
    className="ilo--table-of-contents"
  >
    <ul
      className="ilo--table-of-contents--list"
    >
      <li
        className="ilo--table-of-contents--list--item"
      >
        <a
          className="ilo--table-of-contents--link"
          href="#example"
        >
          Item One
        </a>
      </li>
      <li
        className="ilo--table-of-contents--list--item"
      >
        <a
          className="ilo--table-of-contents--link"
          href="#example"
        >
          Item Two
        </a>
      </li>
      <li
        className="ilo--table-of-contents--list--item"
      >
        <a
          className="ilo--table-of-contents--link"
          href="#example"
        >
          Item Three
        </a>
      </li>
      <li
        className="ilo--table-of-contents--list--item"
      >
        <a
          className="ilo--table-of-contents--link"
          href="#example"
        >
          Item Four
        </a>
      </li>
      <li
        className="ilo--table-of-contents--list--item"
      >
        <a
          className="ilo--table-of-contents--link"
          href="#example"
        >
          Item Five
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Storyshots Components/Tag Anchor Tag 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <ul
    className="ilo--tag-set"
  >
    <li
      className="ilo--tag-set__item"
    >
      <a
        className="ilo--tag ilo--tag--anchor icon icon__position--right"
        href="https://www.google.com/"
        id="tag1"
      >
        Test 1
      </a>
    </li>
    <li
      className="ilo--tag-set__item"
    >
      <a
        className="ilo--tag ilo--tag--anchor icon icon__position--right"
        href="https://www.google.com/"
        id="tag2"
      >
        Test 2
      </a>
    </li>
    <li
      className="ilo--tag-set__item"
    >
      <a
        className="ilo--tag ilo--tag--anchor icon icon__position--right"
        href="https://www.google.com/"
        id="tag3"
      >
        Test 3
      </a>
    </li>
    <li
      className="ilo--tag-set__item"
    >
      <a
        className="ilo--tag ilo--tag--anchor icon icon__position--right"
        href="https://www.google.com/"
        id="tag4"
      >
        Test 4
      </a>
    </li>
    <li
      className="ilo--tag-set__item"
    >
      <a
        className="ilo--tag ilo--tag--anchor icon icon__position--right"
        href="https://www.google.com/"
        id="tag5"
      >
        Test 5
      </a>
    </li>
    <li
      className="ilo--tag-set__item"
    >
      <a
        className="ilo--tag ilo--tag--anchor icon icon__position--right"
        href="https://www.google.com/"
        id="tag6"
      >
        Test 6
      </a>
    </li>
    <li
      className="ilo--tag-set__item"
    >
      <a
        className="ilo--tag ilo--tag--anchor icon icon__position--right"
        href="https://www.google.com/"
        id="tag7"
      >
        Test 7
      </a>
    </li>
    <li
      className="ilo--tag-set__item"
    >
      <a
        className="ilo--tag ilo--tag--anchor icon icon__position--right"
        href="https://www.google.com/"
        id="tag8"
      >
        Test 8
      </a>
    </li>
    <li
      className="ilo--tag-set__item"
    >
      <a
        className="ilo--tag ilo--tag--anchor icon icon__position--right"
        href="https://www.google.com/"
        id="tag9"
      >
        Test 9
      </a>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/Tag Button Tag 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <ul
    className="ilo--tag-set"
  />
</div>
`;

exports[`Storyshots Components/Tag Display Tag 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <ul
    className="ilo--tag-set"
  >
    <li
      className="ilo--tag-set__item"
    >
      <span
        className="ilo--tag ilo--tag--display icon icon__position--right"
        id="tag1"
      >
        Test 1
      </span>
    </li>
    <li
      className="ilo--tag-set__item"
    >
      <span
        className="ilo--tag ilo--tag--display icon icon__position--right"
        id="tag2"
      >
        Test 2
      </span>
    </li>
    <li
      className="ilo--tag-set__item"
    >
      <span
        className="ilo--tag ilo--tag--display icon icon__position--right"
        id="tag3"
      >
        Test 3
      </span>
    </li>
    <li
      className="ilo--tag-set__item"
    >
      <span
        className="ilo--tag ilo--tag--display icon icon__position--right"
        id="tag4"
      >
        Test 4
      </span>
    </li>
    <li
      className="ilo--tag-set__item"
    >
      <span
        className="ilo--tag ilo--tag--display icon icon__position--right"
        id="tag5"
      >
        Test 5
      </span>
    </li>
    <li
      className="ilo--tag-set__item"
    >
      <span
        className="ilo--tag ilo--tag--display icon icon__position--right"
        id="tag6"
      >
        Test 6
      </span>
    </li>
    <li
      className="ilo--tag-set__item"
    >
      <span
        className="ilo--tag ilo--tag--display icon icon__position--right"
        id="tag7"
      >
        Test 7
      </span>
    </li>
    <li
      className="ilo--tag-set__item"
    >
      <span
        className="ilo--tag ilo--tag--display icon icon__position--right"
        id="tag8"
      >
        Test 8
      </span>
    </li>
    <li
      className="ilo--tag-set__item"
    >
      <span
        className="ilo--tag ilo--tag--display icon icon__position--right"
        id="tag9"
      >
        Test 9
      </span>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/Tooltip Tooltip - Dark 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    className="ilo--tooltip--wrapper undefined"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <a
      href="https://www.google.com/"
    >
      This is testing for the tooltip
    </a>
    <span
      className="ilo--tooltip ilo--tooltip--dark ilo--tooltip--alignment-left"
      style={
        Object {
          "left": "0px",
          "top": "0px",
        }
      }
    >
      <span
        className="ilo--tooltip--arrow ilo--tooltip--arrow--placement-center"
        role="presentation"
      />
      This is a tooltip
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Tooltip Tooltip - Dark, with Icon 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    className="ilo--tooltip--wrapper has-icon"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <span
      className="ilo--tooltip--icon"
    >
      <svg
        aria-hidden={true}
        className="ilo--icon"
        fill="currentColor"
        focusable="false"
        height={16}
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0Zm1 12H7V7h2v5ZM8 6a.94.94 0 0 1-1-1 .94.94 0 0 1 1-1 .94.94 0 0 1 1 1 .94.94 0 0 1-1 1Z"
          fill="currentColor"
        />
      </svg>
    </span>
    <span
      className="ilo--tooltip ilo--tooltip--dark ilo--tooltip--alignment-left"
      style={
        Object {
          "left": "0px",
          "top": "0px",
        }
      }
    >
      <span
        className="ilo--tooltip--arrow ilo--tooltip--arrow--placement-center"
        role="presentation"
      />
      This is a tooltip
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Tooltip Tooltip - Light 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    className="ilo--tooltip--wrapper undefined"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <a
      href="https://www.google.com/"
    >
      This is testing for the tooltip
    </a>
    <span
      className="ilo--tooltip ilo--tooltip--light ilo--tooltip--alignment-left"
      style={
        Object {
          "left": "0px",
          "top": "0px",
        }
      }
    >
      <span
        className="ilo--tooltip--arrow ilo--tooltip--arrow--placement-center"
        role="presentation"
      />
      This is a tooltip
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Tooltip Tooltip - Light, with Icon 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <div
    className="ilo--tooltip--wrapper has-icon"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <span
      className="ilo--tooltip--icon"
    >
      <svg
        aria-hidden={true}
        className="ilo--icon"
        fill="currentColor"
        focusable="false"
        height={16}
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0Zm1 12H7V7h2v5ZM8 6a.94.94 0 0 1-1-1 .94.94 0 0 1 1-1 .94.94 0 0 1 1 1 .94.94 0 0 1-1 1Z"
          fill="currentColor"
        />
      </svg>
    </span>
    <span
      className="ilo--tooltip ilo--tooltip--light ilo--tooltip--alignment-left"
      style={
        Object {
          "left": "0px",
          "top": "0px",
        }
      }
    >
      <span
        className="ilo--tooltip--arrow ilo--tooltip--arrow--placement-center"
        role="presentation"
      />
      This is a tooltip
    </span>
  </div>
</div>
`;
